feat: add nav in header

--- a/project-management-app/src/app/core/components/header/create-button/create-button.component.html
+++ b/project-management-app/src/app/core/components/header/create-button/create-button.component.html
@@ -2,6 +2,12 @@
   Create new board
 </button>
 
-<button class="btn--icon" mat-icon-button color="primary" (click)="openCreateBoardDialog()">
+<button
+  class="btn--icon"
+  mat-icon-button
+  color="primary"
+  (click)="openCreateBoardDialog()"
+  title="Create new board"
+>
   <mat-icon>note_add</mat-icon>
 </button>
