--- a/project-management-app/src/app/app.component.html
+++ b/project-management-app/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="main-content">
-  <app-header class="sticky"></app-header>
+  <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer class="footer"></app-footer>
 </div>
-
 <app-loader></app-loader>
 <app-message-box></app-message-box>
