--- a/project-management-app/src/app/core/components/header/header/header.component.scss
+++ b/project-management-app/src/app/core/components/header/header/header.component.scss
@@ -19,7 +19,6 @@
   left: 0;
   z-index: 500;
   padding: 0 3rem;
-  border-bottom: 2px solid $color-white-darken;
   transition: all 0.3s ease-in-out;
   background-color: $form-bg;
   display: flex;
@@ -34,6 +33,13 @@
     background-color: $color-white-darken;
     box-shadow: 0px 4px 6px 2px $shadow-color;
     height: 7rem;
+  }
+
+  &.transparent {
+    background-color: transparent;
+    margin-bottom: -9rem;
+    box-shadow: none;
+    height: 9rem;
   }
 }
 
