--- a/project-management-app/src/app/core/components/header/navigation/navigation.component.html
+++ b/project-management-app/src/app/core/components/header/navigation/navigation.component.html
@@ -1,14 +1,16 @@
-<span *ngIf="profile$ | async as profile" class="user-name" title="Your name">{{
-  profile.name
-}}</span>
-<div class="nav-block">
-  <a class="btn" mat-button color="primary" routerLink="/profile" (click)="toggleNavigation()"
-    >Profile</a
-  >
-  <a class="btn" mat-button color="primary" routerLink="/welcome" (click)="toggleNavigation()"
-    >About</a
-  >
-  <button class="btn" mat-button color="primary" (click)="onLogout(); toggleNavigation()">
-    Logout
-  </button>
-</div>
+<ng-container *ngIf="(isAuth$ | async) && !hiddenElement">
+  <span *ngIf="profile$ | async as profile" class="user-name" title="Your name">{{
+    profile.name
+  }}</span>
+  <div class="nav-block">
+    <a class="btn" mat-button color="primary" routerLink="/profile" (click)="toggleNavigation()"
+      >Profile</a
+    >
+    <a class="btn" mat-button color="primary" routerLink="/welcome" (click)="toggleNavigation()"
+      >About</a
+    >
+    <button class="btn" mat-button color="primary" (click)="onLogout(); toggleNavigation()">
+      Logout
+    </button>
+  </div>
+</ng-container>
