--- a/project-management-app/src/app/core/components/header/open-navigation/open-navigation.component.html
+++ b/project-management-app/src/app/core/components/header/open-navigation/open-navigation.component.html
@@ -1,3 +1,3 @@
-<button mat-icon-button class="open-nav">
+<button mat-icon-button class="open-nav" *ngIf="(isAuth$ | async) && !hiddenElement">
   <mat-icon>expand_more</mat-icon>
 </button>
