--- a/project-management-app/src/app/welcome/pages/welcome/welcome.component.scss
+++ b/project-management-app/src/app/welcome/pages/welcome/welcome.component.scss
@@ -248,11 +248,9 @@ p {
   }
 
   .welcome_buttons-container {
-    width: 20vh;
-    height: 9vh;
-    row-gap: 2vh;
-    right: 4%;
-    top: 6%;
+    gap: 2rem;
+    right: 5rem;
+    top: 10rem;
   }
 }
 
@@ -348,11 +346,9 @@ p {
 
   .welcome_buttons-container {
     flex-direction: column;
-    width: 10vw;
-    height: 20vw;
-    row-gap: 2vw;
-    right: 4%;
-    top: 6%;
+    right: 5rem;
+    top: 10rem;
+    gap: 2rem;
   }
 }
 
