--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-white-darken: #f4f3f6;
 $color-grey: #bdcbd4;
 $color-grey-dark: #747691;
 $color-pink: #d88dbd;
+$color-pink-transparent: #d88dbd42;
 $blue-color: #363062;
 
 //block colors
