--- a/project-management-app/src/app/core/components/header/navigation/navigation.component.scss
+++ b/project-management-app/src/app/core/components/header/navigation/navigation.component.scss
@@ -44,8 +44,14 @@
   line-height: 2.4rem;
   border-radius: 0;
   padding: 0.3rem 1.2rem;
+  transition: all 0.3s;
 
   &:not(:last-child) {
     border-right: 1px solid $board-main-bg-darken;
+  }
+
+  &:hover,
+  &.active {
+    background-color: $color-pink-transparent;
   }
 }
