--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.html
@@ -1,6 +1,7 @@
 <div class="main">
   <div class="main__abstract"></div>
   <div class="main__form">
+    <app-back-button class="main__btn-back"></app-back-button>
     <ng-content></ng-content>
   </div>
 </div>
