--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
@@ -40,10 +40,11 @@
       display: none;
     }
   }
+}
 
-  &__btn-back {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-  }
+.btn-back {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  z-index: 510;
 }
