--- a/project-management-app/src/app/shared/components/back-button/back-button.component.scss
+++ b/project-management-app/src/app/shared/components/back-button/back-button.component.scss
@@ -1,21 +1,24 @@
 @import "variables";
 
-$btn-size: 4rem;
+$btn-size: 5rem;
 
 .btn-back {
-  display: block;
   border-radius: $btn-size;
-  border: 1px solid $board-main-bg;
-  background-color: $color-pink-transparent;
+  border: 1px solid $theme-primary;
   z-index: 3;
   width: $btn-size;
   height: $btn-size;
+  display: flex;
+  align-items: center;
 
   &__icon {
     display: block;
     width: 100%;
     height: 100%;
     font-size: $btn-size;
-    line-height: 3.9rem;
+  }
+
+  &:hover {
+    background-color: $color-pink;
   }
 }
