--- a/project-management-app/src/app/boards/components/board/column/column.component.html
+++ b/project-management-app/src/app/boards/components/board/column/column.component.html
@@ -12,12 +12,13 @@
         </div>
       </div>
       <app-button-board-delete title="Delete column"
-      (click)="boardHandlingService.openDialogToDelete('column', columnTitle, boardID, columnID)"
+      (click)="boardHandlingService.openDialogToDelete('column', columnTitle, boardID, columnID, '')"
       appClickStopPropagation></app-button-board-delete>
     </div>
 
     <div class="column__content">
-      <app-task class="column__item" *ngFor="let task of column?.tasks" [task]="task"></app-task>
+      <app-task class="column__item" *ngFor="let task of column?.tasks" [task]="task"
+      [columnID]="columnID" [boardID]="boardID"></app-task>
     </div>
   </div>
   <app-button-board-create text="Add task"
