feat: add task deletion

--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -52,7 +52,8 @@
       </mat-form-field>
     </form>
   </div>
-  <button (click)="openDialogToDeleteTheBoard()" mat-fab color="primary" class="board__delete-button"
+  <button (click)="boardHandlingService.openDialogToDelete('board', boardName, id, '', '')"
+  mat-fab color="primary" class="board__delete-button"
   appMouseMoveStopPropagation appMouseClickStopPropagation>
     <mat-icon>delete_forever</mat-icon>
   </button>
