--- a/project-management-app/src/app/welcome/pages/welcome/welcome.component.html
+++ b/project-management-app/src/app/welcome/pages/welcome/welcome.component.html
@@ -1,30 +1,44 @@
 <main>
   <h1 [class.active]="pageActivation">Project<br />Management<br />App</h1>
-  <div
-    class="welcome_buttons-container"
-    [class.active]="pageActivation"
-    *ngIf="(isAuth$ | async) === false; else logoutBlock"
-  >
-    <button mat-fab color="primary" title="log in" class="welcome_button" routerLink="/auth/login">
-      <mat-icon>account_circle</mat-icon>
-    </button>
-    <button
-      mat-fab
-      color="primary"
-      title="sign up"
-      class="welcome_button"
-      routerLink="/auth/signup"
+  <ng-container *transloco="let t">
+    <div
+      class="welcome_buttons-container"
+      [class.active]="pageActivation"
+      *ngIf="(isAuth$ | async) === false; else logoutBlock"
     >
-      <mat-icon>account_box</mat-icon>
-    </button>
-  </div>
-  <ng-template #logoutBlock>
-    <div class="welcome_buttons-container" [class.active]="pageActivation">
-      <button mat-fab color="primary" title="logout" class="welcome_button" (click)="onLogout()">
-        <mat-icon>logout</mat-icon>
+      <button
+        mat-fab
+        color="primary"
+        [title]="t('auth.login-title')"
+        class="welcome_button"
+        routerLink="/auth/login"
+      >
+        <mat-icon>account_circle</mat-icon>
+      </button>
+      <button
+        mat-fab
+        color="primary"
+        [title]="t('auth.signup-title')"
+        class="welcome_button"
+        routerLink="/auth/signup"
+      >
+        <mat-icon>account_box</mat-icon>
       </button>
     </div>
-  </ng-template>
+    <ng-template #logoutBlock>
+      <div class="welcome_buttons-container" [class.active]="pageActivation">
+        <button
+          mat-fab
+          color="primary"
+          [title]="t('navigation.logout')"
+          class="welcome_button"
+          (click)="onLogout()"
+        >
+          <mat-icon>logout</mat-icon>
+        </button>
+      </div>
+    </ng-template>
+  </ng-container>
 
   <div class="welcome_main-img" [class.active]="pageActivation"></div>
   <div class="welcome_arrows" [class.active]="pageActivation"></div>
@@ -33,25 +47,26 @@
   <div class="welcome_left-bottom-cube" [class.active]="pageActivation"></div>
   <div class="welcome_right-bottom-cube" [class.active]="pageActivation"></div>
   <div class="welcome_grid" [class.active]="pageActivation"></div>
-  <div class="welcome_team-container" [class.active]="pageActivation">
-    <p [class.active]="pageActivation">Our team</p>
-    <div class="welcome_team-inner-container">
-      <div class="welcome_team-img-container">
-        <div class="welcome_ihar-img team-img"></div>
-        <p [class.active]="pageActivation">Ihar</p>
-      </div>
-      <div class="welcome_team-img-container">
-        <div class="welcome_tetiana-img team-img"></div>
-        <p [class.active]="pageActivation">Tetiana</p>
-      </div>
-      <div class="welcome_team-img-container">
-        <div class="welcome_ilia-img team-img"></div>
-        <p [class.active]="pageActivation">Ilia</p>
+  <ng-container *transloco="let t; read: 'welcome'">
+    <div class="welcome_team-container" [class.active]="pageActivation">
+      <p [class.active]="pageActivation">{{ t("our-team") }}</p>
+      <div class="welcome_team-inner-container">
+        <div class="welcome_team-img-container">
+          <div class="welcome_ihar-img team-img"></div>
+          <p [class.active]="pageActivation">{{ t("Ihar") }}</p>
+        </div>
+        <div class="welcome_team-img-container">
+          <div class="welcome_tetiana-img team-img"></div>
+          <p [class.active]="pageActivation">{{ t("Tetiana") }}</p>
+        </div>
+        <div class="welcome_team-img-container">
+          <div class="welcome_ilia-img team-img"></div>
+          <p [class.active]="pageActivation">{{ t("Ilia") }}</p>
+        </div>
       </div>
     </div>
-  </div>
-  <p [class.active]="pageActivation">
-    Take your company to<br />
-    the next level with a lot of<br />ideas and making great<br />progress
-  </p>
+    <p [class.active]="pageActivation" class="slogan">
+      {{ t("slogan") }}
+    </p>
+  </ng-container>
 </main>
