--- a/project-management-app/src/app/core/components/header/navigation/navigation.component.scss
+++ b/project-management-app/src/app/core/components/header/navigation/navigation.component.scss
@@ -28,12 +28,16 @@
   }
 }
 
+.nav-block {
+  display: flex;
+}
+
 .user-name {
   display: block;
   font-size: 2.5rem;
   line-height: 3rem;
   font-weight: 300;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1.5rem 0.5rem 0;
   max-width: 20rem;
   white-space: nowrap;
   overflow: hidden;
@@ -45,6 +49,10 @@
   border-radius: 0;
   padding: 0.3rem 1.2rem;
   transition: all 0.3s;
+
+  @media only screen and (max-width: 1280px) {
+    padding: 0.3rem 0.6rem;
+  }
 
   &:not(:last-child) {
     border-right: 1px solid $board-main-bg-darken;
