--- a/project-management-app/src/app/user/components/form-name/form-name.component.html
+++ b/project-management-app/src/app/user/components/form-name/form-name.component.html
@@ -1,15 +1,37 @@
-<form class="form-name" [formGroup]="form" (submit)="onSubmit(formDirective)" #formDirective="ngForm">
-  <app-form-title [title]="title"></app-form-title>
-  <app-form-field label="Name" [control]="controlName"></app-form-field>
-  <app-form-error [control]="controlName" [errors]="formErrors[controlNameKey]"></app-form-error>
-
-  <app-form-field label="Login" [control]="controlLogin"></app-form-field>
-  <app-form-error [control]="controlLogin" [errors]="formErrors[controlLoginKey]"></app-form-error>
-
-  <app-form-field-password label="Current password" [control]="controlOldPassword"></app-form-field-password>
-  <app-form-error [control]="controlOldPassword" [errors]="formErrors[controlOldPasswordKey]"></app-form-error>
-
-  <app-form-submit>
-    <app-button text="Submit" [isDisabled]="!form.valid"></app-button>
-  </app-form-submit>
+<form
+  class="form-name"
+  [formGroup]="form"
+  (submit)="onSubmit(formDirective)"
+  #formDirective="ngForm"
+  *transloco="let t"
+>
+  <app-form-title [title]="t(title)"></app-form-title>
+  <div class="form-field">
+    <app-form-field
+      [label]="t('profile.name')"
+      [placeholder]="t('profile.name')"
+      [control]="controlName"
+    ></app-form-field>
+    <app-form-error [control]="controlName" [errors]="formErrors[controlNameKey]"></app-form-error>
+    <app-form-field
+      [label]="t('profile.login')"
+      [control]="controlLogin"
+      [placeholder]="t('profile.login')"
+    ></app-form-field>
+    <app-form-error
+      [control]="controlLogin"
+      [errors]="formErrors[controlLoginKey]"
+    ></app-form-error>
+    <app-form-field-password
+      [label]="t('profile.current-password')"
+      [control]="controlOldPassword"
+    ></app-form-field-password>
+    <app-form-error
+      [control]="controlOldPassword"
+      [errors]="formErrors[controlOldPasswordKey]"
+    ></app-form-error>
+    <app-form-submit>
+      <app-button text="submit" [isDisabled]="!form.valid"></app-button>
+    </app-form-submit>
+  </div>
 </form>
