--- a/project-management-app/src/app/user/components/form-password/form-password.component.html
+++ b/project-management-app/src/app/user/components/form-password/form-password.component.html
@@ -1,18 +1,41 @@
-<form class="form-password" [formGroup]="form" (submit)="onSubmit(formDirective)" #formDirective="ngForm">
+<form
+  class="form-password"
+  [formGroup]="form"
+  (submit)="onSubmit(formDirective)"
+  #formDirective="ngForm"
+  *transloco="let t"
+>
   <app-form-title [title]="title"></app-form-title>
 
-  <app-form-field-password label="Current password" [control]="controlOldPassword"></app-form-field-password>
-  <app-form-error [control]="controlOldPassword" [errors]="formErrors[controlOldPasswordKey]"></app-form-error>
-
-  <app-form-field-password label="New password" [control]="controlPassword"></app-form-field-password>
-  <app-form-error [control]="controlPassword" [errors]="formErrors[controlPasswordKey]"></app-form-error>
-
-  <app-form-field-password label="Confirm new password" [control]="controlPasswordConfirm">
-  </app-form-field-password>
-  <app-form-error [control]="controlPasswordConfirm" [errors]="formErrors[controlPasswordConfirmKey]">
-  </app-form-error>
-
-  <app-form-submit>
-    <app-button text="Submit" [isDisabled]="!form.valid"></app-button>
-  </app-form-submit>
+  <div class="form-field">
+    <app-form-field-password
+      [label]="t('profile.current-password')"
+      [control]="controlOldPassword"
+    ></app-form-field-password>
+    <app-form-error
+      [control]="controlOldPassword"
+      [errors]="formErrors[controlOldPasswordKey]"
+    ></app-form-error>
+    <app-form-field-password
+      [label]="t('profile.new-password')"
+      [control]="controlPassword"
+    ></app-form-field-password>
+    <app-form-error
+      [control]="controlPassword"
+      [errors]="formErrors[controlPasswordKey]"
+    ></app-form-error>
+    <app-form-field-password
+      [label]="t('profile.confirm-new-password')"
+      [control]="controlPasswordConfirm"
+    >
+    </app-form-field-password>
+    <app-form-error
+      [control]="controlPasswordConfirm"
+      [errors]="formErrors[controlPasswordConfirmKey]"
+    >
+    </app-form-error>
+    <app-form-submit>
+      <app-button text="submit" [isDisabled]="!form.valid"></app-button>
+    </app-form-submit>
+  </div>
 </form>
