--- a/project-management-app/src/app/user/components/tabs/tabs.component.html
+++ b/project-management-app/src/app/user/components/tabs/tabs.component.html
@@ -1,14 +1,16 @@
-<mat-tab-group class="tabs" mat-align-tabs="start">
-  <mat-tab label="Change general data">
+<mat-tab-group class="tabs" mat-align-tabs="start" *transloco="let t; read: 'profile'">
+  <mat-tab [label]="t('change-general')">
     <div class="tabs__item">
-      <app-form-name [profile]="profile" (submitForm)="onSubmitForm($event)">
-      </app-form-name>
+      <app-form-name [profile]="profile" (submitForm)="onSubmitForm($event)"> </app-form-name>
     </div>
   </mat-tab>
-  <mat-tab label="Change password">
+  <mat-tab [label]="t('change-password')">
     <div class="tabs__item">
-      <app-form-password [name]="profile?.name || ''" [login]="profile?.login || ''"
-        (submitForm)="onSubmitForm($event)"></app-form-password>
+      <app-form-password
+        [name]="profile?.name || ''"
+        [login]="profile?.login || ''"
+        (submitForm)="onSubmitForm($event)"
+      ></app-form-password>
     </div>
   </mat-tab>
 </mat-tab-group>
