--- a/project-management-app/src/app/boards/components/board/column/column.component.html
+++ b/project-management-app/src/app/boards/components/board/column/column.component.html
@@ -16,14 +16,19 @@
       appClickStopPropagation></app-button-board-delete>
     </div>
     <div class="column__content">
+      
       <div cdkDropList
       [cdkDropListData]="columnTasks"
       class="example-list"
+      cdkDropListSortingDisabled
       (cdkDropListDropped)="drop($event)">
+
         <app-task class="column__item" *ngFor="let task of columnTasks" [task]="task"
         (click)="boardHandlingService.updateTaskModal(boardID, columnID, task)"
         [columnID]="columnID" [boardID]="boardID" cdkDrag></app-task>
+
       </div>
+
     </div>
   </div>
   <app-button-board-create text="Add task"
