--- a/project-management-app/src/app/boards/components/board/board.component.html
+++ b/project-management-app/src/app/boards/components/board/board.component.html
@@ -16,7 +16,8 @@
     [cdkDropListData]="columns"
     cdkDropListOrientation="horizontal"
     class="board__content board__content--scrollable"
-    (cdkDropListDropped)="drop($event)">
+    (cdkDropListDropped)="drop($event)"
+    cdkDropListGroup>
     <app-column class="example-box" *ngFor="let columnItem of board?.columns" [column]="columnItem" [boardID]="id"
       cdkDrag>
     </app-column>
