refactor: change http message-box component

--- a/project-management-app/src/app/core/components/message-box/message-box.component.html
+++ b/project-management-app/src/app/core/components/message-box/message-box.component.html
@@ -1,5 +1,5 @@
-<div class="message-box" *ngIf="isMessageBoxShown">
-  <p class="message-box__text">{{message}}</p>
+<div class="message-box" *ngIf="state.isShown">
+  <p class="message-box__text">{{state.message}}</p>
   <button mat-button class="message-box__btn" (click)="hideMessage()">
     <mat-icon>close</mat-icon>
   </button>
