--- a/project-management-app/src/app/auth/pages/login-page/login-page.component.html
+++ b/project-management-app/src/app/auth/pages/login-page/login-page.component.html
@@ -3,10 +3,10 @@
     <app-form [form]="form" (submit)="onSubmit()">
       <app-form-title [title]="title"></app-form-title>
 
-      <app-form-field [control]="controlLogin" [placeholder]="'Enter login'"></app-form-field>
+      <app-form-field [control]="controlLogin" placeholder="Enter login" label="Login"></app-form-field>
       <app-form-error [control]="controlLogin" [errors]="formErrors[controlLoginKey]"></app-form-error>
 
-      <app-form-field-password [control]="controlPassword"></app-form-field-password>
+      <app-form-field-password [control]="controlPassword" label="Password"></app-form-field-password>
       <app-form-error [control]="controlPassword" [errors]="formErrors[controlPasswordKey]"></app-form-error>
 
       <app-form-submit>
