--- a/project-management-app/src/app/boards/shared/components/button-board-create/button-board-create.component.scss
+++ b/project-management-app/src/app/boards/shared/components/button-board-create/button-board-create.component.scss
@@ -1,13 +1,11 @@
 @import "variables";
+@import "mixins";
 
 .button-board-create {
+  @include btn-shadow-style;
+
   min-width: 180px;
   width: 100%;
   height: 36px;
   border-radius: $border-radius;
-  transition: filter 0.5s;
-
-  &:hover {
-    filter: brightness(1.3);
-  }
 }
