--- a/project-management-app/src/app/shared/components/button/button.component.scss
+++ b/project-management-app/src/app/shared/components/button/button.component.scss
@@ -1,15 +1,13 @@
 @import "variables";
+@import "mixins";
 
 .btn {
+  @include btn-shadow-style;
+
   width: 100%;
   height: 100%;
   font-size: 2rem;
   border-radius: $border-radius;
-  transition: filter 0.5s;
-
-  &:hover:not(.btn:disabled) {
-    filter: brightness(160%);
-  }
 
   &:disabled {
     cursor: not-allowed;
