--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -43,14 +43,18 @@
   box-shadow: 1px 1px 6px 1px $shadow-color;
   transition: all 0.3s ease-in-out;
 
-  &:hover {
+  &:hover:not(&:disabled) {
     transform: translateY(-2px);
     box-shadow: 4px 4px 6px 2px $shadow-color;
   }
 
-  &:active {
+  &:active:not(&:disabled) {
     transform: translateY(0);
     box-shadow: 1px 1px 6px 1px $shadow-color;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
   }
 }
 
