--- a/project-management-app/src/app/main/pages/test/test.component.html
+++ b/project-management-app/src/app/main/pages/test/test.component.html
@@ -1,3 +1,10 @@
+<section class="users" *ngIf="users$ | async as users">
+  <div class="user-card" *ngFor="let user of users">
+    <h4>login: {{ user.login }}</h4>
+    <h5>name: {{ user.name }}</h5>
+  </div>
+</section>
+<hr />
 <input type="text" placeholder="Board Title" [(ngModel)]="boardTitle" />
 <button mat-stroked-button (click)="addBoard()">create board</button>
 
