--- a/project-management-app/src/app/main/pages/test/test.component.scss
+++ b/project-management-app/src/app/main/pages/test/test.component.scss
@@ -16,3 +16,25 @@
   max-width: 28%;
   border-radius: $border-radius;
 }
+
+.users {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding: 5rem 3rem;
+}
+
+.user-card {
+  background-color: $color-white-darken;
+  padding: 1rem;
+  border-radius: $border-radius;
+  box-shadow: 4px 4px 8px 6px rgba(128, 128, 128, 0.473);
+  max-width: 30%;
+  transition: all 0.4s;
+  user-select: none;
+
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 6px 6px 12px 6px rgba(128, 128, 128, 0.404);
+  }
+}
