--- a/project-management-app/src/app/boards/components/board/column/column.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/column.component.scss
@@ -3,6 +3,7 @@
 
 :host {
   opacity: 1;
+  // animation: slideColumn 0.6s ease-in forwards;
   @for $i from 0 through 10 {
     &:nth-of-type(#{$i}n) {
       animation-delay: #{$i * 0.2}s;
@@ -109,10 +110,6 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
-  border: none;
-}
-
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.example-list.cdk-drop-list-dragging .column-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
