--- a/project-management-app/src/app/core/components/header/header/header.component.html
+++ b/project-management-app/src/app/core/components/header/header/header.component.html
@@ -1,16 +1,9 @@
 <ng-container *ngrxLet="isAuth$ as isAuth">
-  <div
-    appStickyHeader
-    class="header"
-    [class]="{ transparent: hideHeader || (!isAuth && hideHeaderWithoutAuth) }"
-  >
+  <div appStickyHeader class="header" [class]="{ transparent: hideHeader || (!isAuth && hideHeaderWithoutAuth) }">
     <app-logo *ngIf="isAuth"></app-logo>
     <app-create-button *ngIf="isAuth && !hideHeader"></app-create-button>
     <app-navigation #navigation (toggleNav)="openNavigation.rotateOpen()"></app-navigation>
     <mat-slide-toggle class="slide-toggle" (change)="toggleLocalization()">En\Ru</mat-slide-toggle>
-    <app-open-navigation
-      #openNavigation
-      (click)="navigation.toggleNavigation()"
-    ></app-open-navigation>
+    <app-open-navigation #openNavigation (click)="navigation.toggleNavigation()"></app-open-navigation>
   </div>
 </ng-container>
