--- a/project-management-app/src/app/core/components/loader/loader.component.scss
+++ b/project-management-app/src/app/core/components/loader/loader.component.scss
@@ -5,7 +5,7 @@
   z-index: 1001;
   transform: translateX(-50%);
   opacity: 0;
-  animation: 0.4s showUp ease-in forwards;
+  animation: 0.1s showUp ease-in forwards;
 }
 
 .overflow {
@@ -18,5 +18,6 @@
   background-color: rgba(0, 0, 0, 0.7);
   pointer-events: none;
   opacity: 0;
-  animation: 0.4s showUp ease-in forwards;
+  animation: 0.1s showUp ease-in forwards;
+  pointer-events: none;
 }
