--- a/project-management-app/src/app/core/components/header/navigation/navigation.component.scss
+++ b/project-management-app/src/app/core/components/header/navigation/navigation.component.scss
@@ -1,9 +1,8 @@
 @import "variables";
+@import "animation";
 
 :host {
   margin-left: auto;
-  display: flex;
-  align-items: center;
 
   @media only screen and (max-width: $laptop) {
     position: absolute;
@@ -26,6 +25,12 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  animation: 0.5s forwards reveal;
 }
 
 .user-name {
