--- a/project-management-app/src/app/boards/components/board/board.component.scss
+++ b/project-management-app/src/app/boards/components/board/board.component.scss
@@ -66,7 +66,7 @@
     padding: 2rem 2rem 0;
     background-color: $board-main-bg;
     border-top: 2px solid $theme-accent;
-    border-radius: $border-radius;
+    border-radius: $border-radius $border-radius 5px 5px;
 
     &--scrollable {
       @include scrollbar(100%, 10px);
@@ -86,13 +86,15 @@
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: $border-radius;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
   opacity: 0.5;
+  border: 2px dashed $theme-accent;
+  border-radius: $border-radius;
+  transition: all 0.3s;
 }
 
 .cdk-drag-animating {
