--- a/project-management-app/src/app/core/components/header/header/header.component.scss
+++ b/project-management-app/src/app/core/components/header/header/header.component.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "mixins";
+@import "animation";
 
 :host {
   display: block;
@@ -14,13 +15,14 @@
 }
 
 .header {
+  animation: 0.5s forwards reveal;
   position: sticky;
   top: 0;
   left: 0;
   z-index: 500;
   padding: 0 3rem;
   transition: all 0.3s ease-in-out;
-  background-color: $form-bg;
+  background-color: $color-white;
   display: flex;
   gap: 2rem;
   align-items: center;
