feat: edit GetUserNameDirective

--- a/project-management-app/src/app/boards/components/board/column/column.component.html
+++ b/project-management-app/src/app/boards/components/board/column/column.component.html
@@ -24,6 +24,7 @@
       <app-task
         class="column__item column-box"
         *ngFor="let task of tasks"
+        [users]="users"
         [task]="task"
         [columnID]="columnID"
         [boardID]="boardID"
