--- a/project-management-app/src/app/core/components/popup/popup.component.scss
+++ b/project-management-app/src/app/core/components/popup/popup.component.scss
@@ -52,7 +52,7 @@
   &__controls {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: center;
     gap: 5rem;
     width: 100%;
 
