--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
@@ -26,7 +26,7 @@
   }
 
   &__form {
-    @media screen and (max-width: $tablet) {
+    @media screen and (max-width: $laptop) {
       flex: 0 1 85%;
     }
 
