--- a/project-management-app/src/app/boards/components/board/column/task/task.component.html
+++ b/project-management-app/src/app/boards/components/board/column/task/task.component.html
@@ -11,8 +11,19 @@
   <mat-card-actions class="task__actions">
     <app-task-member name="Username"></app-task-member>
     <div class="task__user" [appGetUserName] = "taskAndUsers"></div>
-    <button class="task__actions__add-btn" mat-button title="Add user to this task">
-      <mat-icon>add</mat-icon>
+    <button class="task__actions__add-btn" mat-button title="Select User"
+    (click)="userSelectToggle()" appClickStopPropagation>
+      <mat-icon>{{ userIcon }}</mat-icon>
     </button>
+    <form class="task__user-form" *ngIf="selectUserMode" appClickStopPropagation>
+      <mat-form-field appearance="fill" class="task__user-select">
+        <!-- <mat-label>select a user</mat-label> -->
+        <mat-select [(ngModel)]="selectedUser" name="user" class="task__user-select">
+          <mat-option *ngFor="let user of users" [value]="user.name" (click)="setUser(user.id)">
+            {{user.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </form>
   </mat-card-actions>
 </mat-card>
