--- a/project-management-app/src/app/boards/components/board/column/column.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/column.component.scss
@@ -2,13 +2,7 @@
 @import "mixins";
 
 :host {
-  opacity: 1;
-  // animation: slideColumn 0.6s ease-in forwards;
-  @for $i from 0 through 10 {
-    &:nth-of-type(#{$i}n) {
-      animation-delay: #{$i * 0.2}s;
-    }
-  }
+  height: fit-content;
   cursor: pointer;
 }
 
@@ -97,9 +91,8 @@
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: $border-radius;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
