--- a/project-management-app/src/app/boards/components/board/board.component.scss
+++ b/project-management-app/src/app/boards/components/board/board.component.scss
@@ -100,6 +100,8 @@
     left: 50%;
     transform: translateX(-50%);
     max-width: 55%;
+    opacity: 0;
+    animation: showUp 0.2s 0.4s linear forwards;
 
     &__text {
       margin-bottom: 4rem;
