--- a/project-management-app/src/app/boards/components/board/column/column.component.html
+++ b/project-management-app/src/app/boards/components/board/column/column.component.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <app-button-board-delete title="Delete column"
-        (click)="boardHandlingService.openDialogToDelete('column', columnTitle, boardID, columnID, '')"
+        (click)="boardHandlingService.openDialogToDelete('column', columnTitle, boardID, columnID, '', false)"
         appClickStopPropagation></app-button-board-delete>
     </div>
     <div
