--- a/project-management-app/src/app/boards/components/board/column/task/task.component.html
+++ b/project-management-app/src/app/boards/components/board/column/task/task.component.html
@@ -1,8 +1,9 @@
 <mat-card class="task">
   <mat-card-title class="task__header">
     <h4 class="task__title">{{task?.title || title}}</h4>
-    <app-button-board-delete title="Delete task" appClickStopPropagation
-    (click)="boardHandlingService.openDialogToDelete('task', taskTitle, boardID, columnID, taskID)">
+    <app-button-board-delete title="Delete task" [style.opacity]="profile.id===task?.userId?'1':'0.3'"
+    appClickStopPropagation
+    (click)="boardHandlingService.openDialogToDelete('task', taskTitle, boardID, columnID, taskID, profile.id!==task?.userId)">
     </app-button-board-delete>
   </mat-card-title>
   <mat-card-content>
