--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -1,7 +1,7 @@
   <div class="board__photo-container" appRandomPhotoBack></div>
   <div class="board__content-container">
     <button mat-icon-button color="white" *ngIf="!boardEditMode" [class.hide]="mouseExisting"
-      (click)="boardEditMode=true;" title="Edit" class="board__edit-button" appMouseMoveStopPropagation
+      (click)="editButtonOnClick()" title="Edit" class="board__edit-button" appMouseMoveStopPropagation
       appMouseClickStopPropagation>
       <mat-icon>edit</mat-icon>
     </button>
@@ -14,7 +14,7 @@
         class="board__save-button">save</mat-icon>
       <span>&nbsp;</span>
       <mat-form-field appearance="fill" class="board-input-form">
-        <mat-label>board title editing</mat-label>
+        <mat-label style="color: white;">board title editing</mat-label>
         <input matInput type="text" formControlName="userTitle" #boardTitleInput (keypress)="editMode=true">
         <button matSuffix mat-icon-button aria-label="Clear" (click)="boardTitleInput.value=''">
           <mat-icon>close</mat-icon>
@@ -31,7 +31,7 @@
         </div>
       </mat-form-field>
       <mat-form-field appearance="fill" class="board-input-form">
-        <mat-label>board description editing</mat-label>
+        <mat-label style="color: white;">board description editing</mat-label>
         <input matInput type="text" formControlName="userDescription" #boardDescriptionInput
           (keypress)="editMode=true">
         <button matSuffix mat-icon-button aria-label="Clear" (click)="boardDescriptionInput.value=''">
