--- a/project-management-app/src/app/boards/components/board/board.component.html
+++ b/project-management-app/src/app/boards/components/board/board.component.html
@@ -4,28 +4,48 @@
       <button mat-stroked-button class="board__btn--back" (click)="onClickBack()">
         <mat-icon>arrow_back</mat-icon>
       </button>
-      <span class="board__title__text">{{board?.title || title}}</span>
+      <span class="board__title__text">{{ board?.title || title }}</span>
     </h2>
-    <div class="board__btn--add-column">
-      <app-button-board-create text="Add column" (click)="boardHandlingService.openCreateColumnDialog(id)">
+    <div class="board__btn--add-column" *transloco="let t; read: 'column'">
+      <app-button-board-create
+        [text]="t('add-column')"
+        (click)="boardHandlingService.openCreateColumnDialog(id)"
+      >
       </app-button-board-create>
     </div>
   </div>
   <div class="board__content">
-    <div *ngIf="!columns || columns && columns.length; else noData" cdkDropList cdkDropListOrientation="horizontal"
-      class="board__content--scrollable" (cdkDropListDropped)="drop($event)" cdkDropListGroup>
-      <app-column class="columns-box" [users]="users" *ngFor="let columnItem of columns" [columns]="columns"
-        [column]="columnItem" [boardID]="id" cdkDragLockAxis="x" cdkDrag>
+    <div
+      *ngIf="!columns || (columns && columns.length); else noData"
+      cdkDropList
+      cdkDropListOrientation="horizontal"
+      class="board__content--scrollable"
+      (cdkDropListDropped)="drop($event)"
+      cdkDropListGroup
+    >
+      <app-column
+        class="columns-box"
+        [users]="users"
+        *ngFor="let columnItem of columns"
+        [columns]="columns"
+        [column]="columnItem"
+        [boardID]="id"
+        cdkDragLockAxis="x"
+        cdkDrag
+      >
       </app-column>
     </div>
   </div>
 </div>
 
 <ng-template #noData>
-  <div class="board__no-data">
-    <p class="board__no-data__text">No data here yet. You may add your first column!</p>
+  <div class="board__no-data" *transloco="let t; read: 'column'">
+    <p class="board__no-data__text">{{ t("empty-board") }}</p>
     <div class="board__btn--add-column board__no-data__btn">
-      <app-button-board-create text="Add column" (click)="boardHandlingService.openCreateColumnDialog(id)">
+      <app-button-board-create
+        [text]="t('add-column')"
+        (click)="boardHandlingService.openCreateColumnDialog(id)"
+      >
       </app-button-board-create>
     </div>
   </div>
