fix profile localize

--- a/project-management-app/src/app/user/components/form-password/form-password.component.html
+++ b/project-management-app/src/app/user/components/form-password/form-password.component.html
@@ -5,7 +5,7 @@
   #formDirective="ngForm"
   *transloco="let t"
 >
-  <app-form-title [title]="title"></app-form-title>
+  <app-form-title [title]="t(title)"></app-form-title>
 
   <div class="form-field">
     <app-form-field-password
