fix task select title localize

--- a/project-management-app/src/app/boards/components/board/column/task/task.component.html
+++ b/project-management-app/src/app/boards/components/board/column/task/task.component.html
@@ -27,7 +27,7 @@
     <button
       class="task__actions__add-btn"
       mat-button
-      title="Select User"
+      [title]="t('column.select-user')"
       (click)="userSelectToggle()"
       *ngIf="!selectUserMode"
       appClickStopPropagation
